# topological-loop-detector

./: .gitignore  CLAIMS.md  LICENSE  README.md  RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml
docs/: architecture.md  benchmark.md  failure_modes.md  real_llm_pilot_v10_master.md  tag_v7_unified_guard.md
examples/: minimal_usage.py
experiments/: run_multiseed.py  run_vnext1.py
reports/: current_results_template.md  latest_results.md
src/topoloop/: __init__.py  benchmark.py  cli.py  evaluation.py  features.py  generators.py  models.py  topology.py  trigger.py
tests/: test_benchmark.py  test_generators.py  test_pipeline.py  test_topology.py
